--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -3,7 +3,7 @@ name: 'Publish Offline'
 description: "This plugin allows administrators to publish a version of their site to another directory on their file system for the express purpose of creating a version of their site offline. It also provides for designers a set of template tags to conditionally display content depending upon whether or not the user is publishing the off or online version of their site."
 author_name: Endevver
 author_link: http://endevver.com
-version: 0.7.1
+version: 0.7.2
 schema_version: 2.1
 
 settings:
@@ -13,6 +13,9 @@ settings:
   output_url:
     scope: blog
     default: '<mt:BlogURL>puboffline/'
+  zip:
+    scope: blog
+    default: 0
 
 object_types:
   offline_batch: 'PubOffline::OfflineBatch'
