--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -3,7 +3,7 @@ name: 'Publish Offline'
 description: "This plugin allows administrators to publish a version of their site to another directory on their file system for the express purpose of creating a version of their site offline. It also provides for designers a set of template tags to conditionally display content depending upon whether or not the user is publishing the off or online version of their site."
 author_name: Endevver
 author_link: http://endevver.com
-version: 0.7.5
+version: 0.7.6
 schema_version: 2.1
 
 settings:
@@ -41,12 +41,18 @@ callbacks:
 page_actions:
   list_templates:
     pub_offline:
-      label: Publish Offline Version
+      label: 'Publish Offline Version'
       order: 1012
       dialog: pub_offline
       permission: publish_post
       condition: >
         sub { MT->app->blog; }
+  theme_dashboard:
+    pub_offline:
+      label: 'Publish Offline Version'
+      order: 300
+      dialog: pub_offline
+      permission: publish_post
 
 tasks: $PubOffline::PubOffline::Plugin::load_tasks
 
