--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -3,16 +3,25 @@ name: 'Publish Offline'
 description: "This plugin allows administrators to publish a version of their site to another directory on their file system for the express purpose of creating a version of their site offline. It also provides for designers a set of template tags to conditionally display content depending upon whether or not the user is publishing the off or online version of their site."
 author_name: Endevver
 author_link: http://endevver.com
-version: 0.7.6
+version: 0.8
 schema_version: 2.1
 
-settings:
+options:
   output_file_path:
     scope: blog
+    type: text
+    label: Output File Path
+    description: 'This is the path that "Publish Offline" will output its files to.'
     default: '<mt:BlogSitePath>puboffline/'
   output_url:
     scope: blog
+    type: text
+    label: Base URL
+    description: 'This is the base URL for accessing files published by "Publish Offline."'
     default: '<mt:BlogURL>puboffline/'
+
+# Obsolete
+settings:
   zip:
     scope: blog
     default: 0
@@ -37,6 +46,8 @@ applications:
 callbacks:
   build_file_filter: $PubOffline::PubOffline::Plugin::build_file_filter
   build_page: $PubOffline::PubOffline::Plugin::build_page
+# TODO: callback for copying assets
+# TODO: callback for copying mt-static 
 
 page_actions:
   list_templates:
