Add the ability to use root relative URLs (along with fully-qualified URLs) to craft the offline site's links.

--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -29,6 +29,9 @@ settings:
     output_file_path:
         scope: blog
         default: '<mt:BlogSitePath>puboffline/'
+    root_relative_url:
+        scope: blog
+        default: 0
     asset_handling:
         scope: blog
         default: copy
