Added an Exclude File Manifest to plugin Settings to specify files to not be copied to the offline site.

--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -50,6 +50,9 @@ settings:
     static_manifest:
         scope: blog
         default: ''
+    exclude_manifest:
+        scope: blog
+        default: ''
 
 blog_config_template:
     code: PubOffline::CMS::settings
