--- a/plugins/PubOffline/config.yaml
+++ b/plugins/PubOffline/config.yaml
@@ -3,6 +3,8 @@ name: 'Publish Offline'
 description: "This plugin allows administrators to publish a version of their site to another directory on their file system for the express purpose of creating a version of their site offline. It also provides for designers a set of template tags to conditionally display content depending upon whether or not the user is publishing the off or online version of their site."
 author_name: Endevver
 author_link: http://endevver.com
+plugin_link: https://github.com/endevver/mt-plugin-puboffline
+doc_link: https://github.com/endevver/mt-plugin-puboffline/blob/master/README.md
 version: 1.0.5
 
 callbacks:
